<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/level_selection_bg"
    tools:context=".others.LevelSelectionActivity">

    <TextView
        android:id="@+id/tv_select_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:fontFamily="@font/heading_font"
        android:text="@string/heading_start_your_challenge"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_easy"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/easy_mode"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_medium"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/medium_mode"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_easy"
        app:layout_constraintStart_toStartOf="@id/btn_easy"
        app:layout_constraintEnd_toEndOf="@id/btn_easy" />

    <Button
        android:id="@+id/btn_difficult"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/difficult_mode"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_medium"
        app:layout_constraintStart_toStartOf="@id/btn_medium"
        app:layout_constraintEnd_toEndOf="@id/btn_medium" />

    <Button
        android:id="@+id/go_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
